# ilp-entropy

./: .gitignore  .pre-commit-config.yaml  .python-version  ARCHITECTURE.md  MakeFile  README.md  config.json  pyproject.toml  reference_pipeline.R  requirements.txt  run_simple.sh  run_sweep.sh  word_list.txt
data/: words.txt
scripts/: main.py  run_entropy.py
src/: acuity.py  entropy.py  io.py  masks.py  probability.py
src/ilp_entropy/: __init__.py  __main__.py  acuity.py  cli.py  config.py  entropy.py  io.py  masks.py  probability.py  runner.py
tests/: test_integration.py  test_performance.py  test_smoke.py
visualization/: plot_results.py
