[project]
name = "ilp_entropy"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pytest (>=8.4.1,<9.0.0)",
    "pandas (>=2.3.0,<3.0.0)",
    "numpy (>=2.3.1,<3.0.0)",
    "matplotlib (>=3.10.3,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
ruff = "^0.12.1"
mypy = "^1.16.1"
isort = "^6.0.1"
pre-commit = "^4.2.0"


[tool.black]
line-length = 100

[tool.ruff]
line-length = 100
lint.select = ["E", "F", "I", "W", "N", "UP", "ASYNC", "B"]

[tool.isort]
profile = "black"

[tool.mypy]
python_version = "3.12"
strict = true
