[project]
name = "ilp_entropy"
version = "0.1.0"
description = "Calculate Initial Landing Position (ILP) Entropy for word recognition during reading"
authors = [
    {name = "Koby Raz", email = "koby@example.com"}
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "click (>=8.0.0,<9.0.0)",
    "pandas (>=2.0.0,<3.0.0)",
    "numpy (>=1.24.0,<3.0.0)",
]

[project.optional-dependencies]
viz = ["matplotlib (>=3.5.0,<4.0.0)"]

[project.scripts]
ilp-entropy = "ilp_entropy.cli:main"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"
black = "^25.1.0"
ruff = "^0.12.1"
mypy = "^1.16.1"
isort = "^6.0.1"
pre-commit = "^4.2.0"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]

[tool.black]
line-length = 100

[tool.ruff]
line-length = 100
lint.select = ["E", "F", "I", "W", "N", "UP", "ASYNC", "B"]

[tool.isort]
profile = "black"

[tool.mypy]
python_version = "3.9"
strict = true
ignore_missing_imports = true
